[package]
name = "cix"
version = "0.0.0"
authors = ["eonil <pub.dev@eonil.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/ci/lib.rs"

[dependencies]
structopt = { version = "0.3", default-features = false }
uuid = { version = "0.8.2", features = ["serde", "v4", "v5"] }
gimli = "0.24.0"
goblin = "0.4.0"