[package]
name = "cix"
version = "0.0.0"
authors = ["eonil <pub.dev@eonil.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ci"
path = "src/ci/lib.rs"

[[bin]]
name = "cix"
test = true

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
structopt = { version = "0.3", default-features = false }
uuid = { version = "0.8.2", features = ["serde", "v4", "v5"] }
gimli = "0.24.0"
goblin = "0.4.0"
tokio = { version = "1.5.0", features = ["full"] }
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
hex = "0.4.3"
ssh2 = "0.9.1"
crossterm = "0.19.0"
im = "15.0.0"
mio = "0.7.11"
async-ssh2-lite = "0.2.1"
async-io = { version = "1.3", default-features = false, features = [] }
async-std = "1.9.0"
futures = "0.3.14"
futures-lite = "1.11.3"
hyper = "0.14"
